fix: add semantic-release-docker

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "depcheck-package-name": "^3.0.1",
     "load-pkg": "^4.0.0",
-    "parse-packagejson-name": "^1.0.1"
+    "parse-packagejson-name": "^1.0.1",
+    "semantic-release-docker": "^2.2.0"
   },
   "devDependencies": {
     "@dword-design/base": "^11.3.10"
