--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
   "type": "module",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": {
+      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -19,27 +24,28 @@
     "lint": "base lint",
     "prepare": "base prepare",
     "prepublishOnly": "base prepublishOnly",
-    "test": "base test"
+    "test": "base test",
+    "typecheck": "base typecheck",
+    "verify": "base verify"
   },
   "dependencies": {
-    "@devcontainers/cli": "^0.76.0",
-    "depcheck-bin-name": "^1.0.1",
-    "depcheck-package-name": "^3.0.1",
+    "@devcontainers/cli": "^0.80.2",
+    "@dword-design/base": "^16.0.10",
+    "depcheck-bin-name": "^2.0.0",
+    "depcheck-package-name": "^4.0.1",
     "execa": "^9.5.2",
-    "load-pkg": "^4.0.0",
-    "parse-packagejson-name": "^1.0.1",
+    "parse-packagejson-name": "npm:@dword-design/parse-packagejson-name-fork@^0.0.2",
+    "read-pkg": "^10.0.0",
     "semantic-release-docker": "^2.2.0"
   },
   "devDependencies": {
-    "@dword-design/base": "^11.3.11",
     "@playwright/test": "^1.52.0",
-    "output-files": "^2.0.32",
-    "playwright-local-tmp-dir": "^1.0.2",
-    "uuid": "^11.1.0"
+    "output-files": "^3.0.0",
+    "uuid": "^13.0.0"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "publishConfig": {
     "access": "public"
